# closedformfm

./: .gitignore  NOTES.md  README.md  main.py  pyproject.toml
conf/: base.yaml  train_cifar10.yaml  train_toy2d.yaml
conf/light/: train_light_cifar10.yaml  train_light_toy2d.yaml
conf/paths/: home.yaml  pwd.yaml  scratch.yaml  test.yaml
conf/slurm/: cpu.yaml  gpu24.yaml  jzv100.yaml
src/: train_cifar10.py  train_toy2d.py
src/utils/: cifar10.py  compute_fid.py  core.py  mean_cfm.py  metrics.py  otcfm.py  structured_conf.py
