[project]
name = "prigml"
version = "0.1.0"
description = "Cleanup of the NeurIPS code, to be adapted for prigml"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clean-fid>=0.1.35",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.5.1",
    "pandas>=2.3.3",
    "pot>=0.9.6.post1",
    "setuptools>=80.9.0",
    "torchcfm>=1.0.7",
    "torchdyn>=1.0.6",
]
